refs #3239 - properly encode response-json when editing a posting and remove inproperly displayed title - move unread-notificator to the right - forum now working in studygroups out of the box after migration - make content-migration a bit more tolerant - fix title generation in mail-notifications
git-svn-id: svn://develop.studip.de/studip/trunk@25795 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -49,14 +49,6 @@
             width: 100%;
         }
 
-        div.title {
-            padding-right: 0px !important;
-
-            p.author {
-                margin-bottom: 0px;
-            }
-        }
-
         span.likes {
             position: relative;
             right: 0px;
@@ -483,6 +475,12 @@ html.no-js #forum .js {
         box-shadow: -5px 5px 5px #888888;
         border-left: solid 40px #dee2e8;
         border-top: solid 40px transparent;
+    }
+
+    .new_posting {
+        position: absolute;
+        top: 10px;
+        right: 10px;
     }
 
     div.action-icons {
